Feature: Database Backup and Restore Management (#305)
* update gitignore

* update .env.example

* create a standalone backup shell script

* create a cron job wrapper for the backup shell script

* implement mysql-restore.sh and update mysql-backup-s3.sh

* configure docker environments to support backup and restore execution

* add database migration for manage backup and restore permission

* implement BackupHandler and register endpoints under admin group

* regenerate swagger api documentation

* add new permisison

* Enforce LF line endings for shell scripts

* Define SCRIPT_DIR to fix log path resolution

* add backup route

* add backup permissions

* add backup page

* fix backup restore files

* fix file scope

* change back file type

* Support DATABASE_PORT override in backup and restore scripts

* disable backup & restore button

* add new update alert

* remove backup restore route

* fix info alert color

---------
